--- a/app/public/style.css
+++ b/app/public/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(https://az616578.vo.msecnd.net/files/responsive/cover/main/desktop/2016/07/22/636047917828997678-126592311_friendship2.jpg);
+    background-image: url(https://st4.depositphotos.com/5935630/19768/v/600/depositphotos_197688324-stock-video-happy-african-american-young-man.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
